--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/renatoam/portfolio#readme",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": ">=0.21.2",
     "esm": "^3.2.25"
   },
   "devDependencies": {
